migration-result/ver/13.x/machine-id/getting-started.mdx
---
title: Machine ID Getting Started Guide
description: Getting started with Teleport Machine ID
version: '13.x'
---

In this getting started guide, you will configure Machine ID to issue
certificates that enable a bot user to connect to a remote host.

Here's an overview of what you will do:

1. Download and install `tbot` on the host that will run
   Machine ID.
2. Create a bot user.
3. Start Machine ID.
4. Use certificates issued by Machine ID to connect to a remote machine.

## Prerequisites

- A host that you wish to assign an identity to using Machine ID.

<Tabs>
  <Tab title="Open Source">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/ver/13.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.2.0.

      ```code
      $ tctl version
      # Teleport v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```

      See [Installation](/ver/13.x/installation) for details.
  </Tab>

  <Tab title="Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0,
      which you can download by visiting your [Teleport account](https://teleport.sh).

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>

  <Tab title="Teleport Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0.
      To download these tools, visit the [Downloads](/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>
</Tabs>

Make sure you can connect to Teleport. Log in to your cluster using `tsh`, then use `tctl`
remotely:

```code
$ tsh login --proxy=teleport.example.com --user=email@example.com
$ tctl status
# Cluster  teleport.example.com
# Version  13.2.0
# CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
```

You can run subsequent `tctl` commands in this guide on your local machine.

For full privileges, you can also run `tctl` commands on your Auth Service host.

```code
$ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
$ tctl status
# Cluster  myinstance.teleport.sh
# Version  13.2.0
# CA pin   sha256:sha-hash-here
```

You must run subsequent `tctl` commands in this guide on your local machine.

## Step 1/4. Download and install Teleport

In this step, you will be downloading and installing Teleport binaries onto the
machine you wish to assign an identity to.

Each Teleport package hosted on our downloads page ships with several useful
binaries, including `teleport`, `tctl`, `tsh`, and `tbot`:

- `teleport` is the daemon used to initialize a Teleport cluster; this binary is not used in this guide
- `tctl` is the administrative tool you will use to create the bot user (step 1/4)
- `tsh` is the client tool you will use to log in to the Teleport Cluster (steps 2/4 and 4/4)
- `tbot` is the Machine ID tool you will use to associate a bot user with a machine (step 3/4)

Download the appropriate Teleport package for your platform:

Use the appropriate commands for your environment to install your package:

<Tabs dropdownView dropdownCaption="Teleport Edition">
  <Tab title="Open Source">
    ```code
    $ curl https://goteleport.com/static/install.sh | bash -s 13.2.0
    ```
  </Tab>

  <Tab title="Enterprise">
    <Tabs>
      <Tab title="Debian 8+/Ubuntu 16.04+ (apt)">
        ```code
        # Download Teleport's PGP public key
        $ sudo curl https://apt.releases.teleport.dev/gpg \
        -o /usr/share/keyrings/teleport-archive-keyring.asc
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport APT repository for v13. You'll need to update this
        # file for each major release of Teleport.
        $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
        https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/v13" \
        | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

        $ sudo apt-get update
        $ sudo apt-get install teleport-ent
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```code
        $ sudo apt-get install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7 (yum)">
        ```code
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for v13. You'll need to update this
        # file for each major release of Teleport.
        # First, get the major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"
        $ sudo yum install teleport-ent
        #
        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```code
        $ sudo yum install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
        ```code
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for v13. You'll need to update this
        # file for each major release of Teleport.
        # Use the dnf config manager plugin to add the teleport RPM repo
        $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"

        # Install teleport
        $ sudo dnf install teleport-ent

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```code
        $ sudo dnf install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Tarball">
        In the example commands below, update `$SYSTEM_ARCH` with the appropriate
        value (`amd64`, `arm64`, or `arm`). All example commands using this variable
        will update after one is filled out.

        ```code
        $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
        # <checksum> <filename>
        $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
        $ shasum -a 256 teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
        # Verify that the checksums match
        $ tar -xvf teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
        $ cd teleport-ent
        $ sudo ./install
        ```

        For FedRAMP/FIPS-compliant installations of Teleport Enterprise, package URLs
        will be slightly different:

        ```code
        $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz.sha256
        # <checksum> <filename>
        $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        $ shasum -a 256 teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        # Verify that the checksums match
        $ tar -xvf teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        $ cd teleport-ent
        $ sudo ./install
        ```
      </Tab>
    </Tabs>
  </Tab>

  <Tab title="Cloud">
    <Tabs>
      <Tab title="Debian 8+/Ubuntu 16.04+ (apt)">
        Add the Teleport repository to your repository list:

        ```code
        # Download Teleport's PGP public key
        $ sudo curl https://apt.releases.teleport.dev/gpg \
        -o /usr/share/keyrings/teleport-archive-keyring.asc
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport apt repository for cloud.
        $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
        https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
        | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

        $ sudo apt-get update
        $ sudo apt-get install teleport-ent
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7 (yum)">
        ```code
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport yum repository for cloud.
        # First, get the major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport.repo")"
        $ sudo yum install teleport-ent
        #
        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
        ```code
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport yum repository for cloud.
        # Use the dnf config manager plugin to add the teleport RPM repo
        $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport.repo")"

        # Install teleport
        $ sudo dnf install teleport-ent

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="Tarball">
        In the example commands below, update `$SYSTEM_ARCH` with the appropriate
        value (`amd64`, `arm64`, or `arm`). All example commands using this variable
        will update after one is filled out.

        ```code
        $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
        # <checksum> <filename>
        $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
        $ shasum -a 256 teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
        # Verify that the checksums match
        $ tar -xvf teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
        $ cd teleport-ent
        $ sudo ./install
        ```
      </Tab>
    </Tabs>

    <Accordion title="Is my Teleport instance compatible with Teleport Cloud?">
      Before installing a `teleport` binary with a version besides v13,
      read our compatibility rules to ensure that the binary is compatible with
      Teleport Cloud.

      When running multiple `teleport` binaries within a cluster, the following rules
      apply:

      - **Patch and minor** versions are always compatible, for example, any 8.0.1
        component will work with any 8.0.3 component and any 8.1.0 component will work
        with any 8.3.0 component.
      - Servers support clients that are 1 major version behind, but do not support
        clients that are on a newer major version. For example, an 8.x.x Proxy Service
        is compatible with 7.x.x resource services and 7.x.x `tsh`, but we don't
        guarantee that a 9.x.x resource service will work with an 8.x.x Proxy Service.
        This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
        You must upgrade to 7.x.x first.
      - Proxy Services and resource services do not support Auth Services that are on
        an older major version, and will fail to connect to older Auth Services by
        default. This behavior can be overridden by passing `--skip-version-check`
        when starting Proxy Services and resource services.
    </Accordion>
  </Tab>
</Tabs>

## Step 2/4. Create a bot user

Before you create a bot user, you need to determine which role(s) you want to
assign to it. You can use the `tctl` command below to examine what roles exist
on your system.

On your client machine, log in to Teleport using `tsh`, then use `tctl` to examine
what roles exist on your system.

Connect to the Teleport Auth Server and use `tctl` to examine what roles exist on
your system.

```code
$ tctl get roles --format=text
```

You will see something like the output below on a fresh install of Teleport with the
default roles—your cluster may have different roles. In this example, let's
assume you want to give the bot the `access` role to allow it to connect to
machines within your cluster.

```
Role    Allowed to login as                           Node Labels Access to resources
------- --------------------------------------------- ----------- ----------------------------------------
access  {{internal.logins}}                           <all nodes> event:list,read,session:read,list
auditor no-login-6566121f-b602-47f1-a118-c9c618ee5aec             session:list,read,event:list,read
editor                                                            user:list,create,read,update,delete,...
```

Machine ID can join with a token or the [IAM Method](/ver/13.x/agents/join-services-to-your-cluster/aws-iam) on AWS.

Assuming that you are using the default `access` role, ensure that you use the
`--logins` flag when adding your bot to specify the SSH logins that you wish to
allow the bot to access on hosts. For our example, we will be using `root`.

<Tabs>
  <Tab title="Token-based Joining">
    ```code
    $ tctl bots add robot --roles=access --logins=root
    ```
  </Tab>

  <Tab title="IAM Method">
    First, create an IAM method token that specifies the AWS account from which
    the bot can join. Create the below file as `iam-token.yaml` then run `tctl
      create -f iam-token.yaml`.

    ```
    kind: token
    version: v2
    metadata:
      # The token name is not a secret because instances must prove that they are
      # running in your AWS account to use this token.
      name: iam-token
    spec:
      # Only allow bots to join using this token.
      roles: [Bot]

      # Set the join method to be IAM.
      join_method: iam

      # Define the name of the bot that will be allowed to use this token.
      bot_name: robot

      allow:
      # Restrict the AWS account and (optionally) ARN that can use this token.
      # This information can be obtained from running the
      # "aws sts get-caller-identity" command from the CLI.
      - aws_account: "111111111111"
        aws_arn: "arn:aws:sts::111111111111:assumed-role/teleport-bot-role/i-*"
    ```

    Next, create the bot user.

    ```
    $ tctl bots add robot --token=iam-token --roles=access --logins=root
    ```
  </Tab>
</Tabs>

## Step 3/4. Start Machine ID

Now start Machine ID using the `tbot` binary. The `tbot start` command will
start running Machine ID in a loop, writing renewable certificates to
`/var/lib/teleport/bot` and the short-lived certificates your application will
use to `/opt/machine-id`.

In a production environment you will want to run Machine ID in the background
using a service manager like systemd. However, in this guide you will run it in
the foreground to better understand how it works.

<Tabs>
  <Tab title="Token-based Joining">
    ```code
    $ export TELEPORT_ANONYMOUS_TELEMETRY=1
    $ sudo tbot start \
       --data-dir=/var/lib/teleport/bot \
       --destination-dir=/opt/machine-id \
       --token=abcd123-insecure-do-not-use-this \
       --join-method=token \
       --auth-server=teleport.example.com:443
    ```

    ```code
    $ export TELEPORT_ANONYMOUS_TELEMETRY=1
    $ sudo tbot start \
       --data-dir=/var/lib/teleport/bot \
       --destination-dir=/opt/machine-id \
       --token=abcd123-insecure-do-not-use-this \
       --join-method=token \
       --auth-server=example.teleport.sh:443
    ```
  </Tab>

  <Tab title="IAM Method">
    ```code
    $ export TELEPORT_ANONYMOUS_TELEMETRY=1
    $ sudo tbot start \
       --data-dir=/var/lib/teleport/bot \
       --destination-dir=/opt/machine-id \
       --token=iam-token \
       --join-method=iam \
       --auth-server=teleport.example.com:443
    ```

    ```code
    $ export TELEPORT_ANONYMOUS_TELEMETRY=1
    $ tbot start \
       --data-dir=/var/lib/teleport/bot \
       --destination-dir=/opt/machine-id \
       --token=iam-token \
       --join-method=iam \
       --auth-server=example.teleport.sh:443
    ```
  </Tab>
</Tabs>

`TELEPORT_ANONYMOUS_TELEMETRY` enables the submission of anonymous usage
telemetry. This helps us shape the future development of `tbot`. You can disable
this by omitting this.

Replace the following fields with values from your own cluster.

- `token` is the token output by the `tctl bots add` command or the name of your IAM method token.
- `destination-dir` is where Machine ID writes user certificates that can be used by applications and tools.
- `data-dir` is where Machine ID writes its private data, including its own short-lived renewable certificates. These should not be used by applications and tools.
- `auth-server` is the address of your Teleport Cloud Proxy Server, for example `example.teleport.sh:443`.

- `token` is the token output by the `tctl bots add` command or the name of your IAM method token.
- `ca-pin` is the CA Pin for your Teleport cluster, and is output by the `tctl bots add` command.
- `destination-dir` is where Machine ID writes user certificates that can be used by applications and tools.
- `data-dir` is where Machine ID writes its private data, including its own short-lived renewable certificates. These should not be used by applications and tools.
- `auth-server` is typically the address of your Teleport Proxy Server
  (`teleport.example.com:443`), but can also be the address of the
  Auth Server is direct connectivity is available.
  `teleport.example.com:443`.

Now that Machine ID has successfully started, let's investigate the
`/opt/machine-id` directory to see what was written to disk.

```code
$ tree /opt/machine-id
machine-id
├── identity
├── key
├── key-cert.pub
├── key.pub
├── known_hosts
├── ssh_config
├── teleport-database-ca.crt
├── teleport-host-ca.crt
├── teleport-user-ca.crt
└── tlscert

0 directories, 10 files
```

This directory contains private key material in the `key.*` files, SSH
certificates in the `identity` file, X.509 certificates in the `tls*` and
`*.crt` files, OpenSSH configuration in the `ssh_config` and
`known_hosts` files to make it easy to integrate Machine ID with external
applications and tools.

## Step 4/4. Use certificates issued by Machine ID

To use Machine ID, find a host that you want to connect to within your cluster
using `tsh ls`. You might see output like the following on your system.

```code
$ tsh ls
Node Name Address        Labels
--------- -------------- -----------------------------
node-name  127.0.0.1:3022 arch=x86_64,group=api-servers
```

<Accordion title="Not seeing Nodes?">
  When Teleport's Auth Service receives a request to list Teleport Nodes (e.g., to
  display Nodes in the Web UI or via `tsh ls`), it only returns the Nodes that the
  current user is authorized to view.

  For each Node in the user's Teleport cluster, the Auth Service applies the
  following checks in order and, if one check fails, hides the Node from the user:

  - None of the user's roles contain a `deny` rule that matches the Node's labels.
  - At least one of the user's roles contains an `allow` rule that matches the
    Node's labels.

  If you are not seeing Nodes when expected, make sure that your user's roles
  include the appropriate `allow` and `deny` rules as documented in the
  [Teleport Access Controls Reference](/ver/13.x/access-controls/reference).
</Accordion>

To use Machine ID with the OpenSSH integration, run the following command to
connect to `node-name` within cluster `example.com`.

```code
$ ssh -F /opt/machine-id/ssh_config root@node-name.example.com
```

In addition to the `ssh` client you can use `tsh`. Replace the `--proxy` parameter
with your proxy address.

```code
$ tsh ssh --proxy=teleport.example.com -i /opt/machine-id/identity root@node-name
```

```code
$ tsh ssh --proxy=mytenant.teleport.sh -i /opt/machine-id/identity root@node-name
```

<Note>
  The below error can occur when the bot does not have permission to log in to
  a node as the requested user:

  ```code
  $ ssh -F /opt/machine-id/ssh_config root@node-name.example.com
  root@node-name: Permission denied (publickey).
  kex_exchange_identification: Connection closed by remote host
  ```

  This can happen in two circumstances:

  - The user you are trying to log in as is not specified under `logins` in the
    role you are using
  - If you have used `--logins` when creating the bot user, the role the bot is
    impersonating does not have the `{{ internal.logins }}` variable specified.

  If you have been following along with the `access` role, do the following.

  - Export the role by running `tctl get roles/access > access.yaml`
  - Edit the `logins` field in `access.yaml`
  - Update the role by running `tctl create -f access.yaml`
</Note>

Now you can replace any invocations of `ssh` with the above command to provide
your applications and tools a machine identity that can be rotated, audited,
and controlled with all the familiar Teleport access controls.

## Next Steps

Now that you know how to create a bot user to access resources in your
infrastructure, dive deeper into the topics relevant to your Machine ID
use-case, for example:

- [Machine ID with Ansible](/ver/13.x/machine-id/guides/ansible)
- [Machine ID with Jenkins](/ver/13.x/machine-id/guides/jenkins)
- [Machine ID with Databases](/ver/13.x/machine-id/guides/databases)

[More information about `TELEPORT_ANONYMOUS_TELEMETRY`.](/ver/13.x/machine-id/reference/telemetry)
